--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,17 +1,17 @@
 # Django Settings
-SECRET_KEY=your-secret-key-here-change-in-production
-DEBUG=False
+SECRET_KEY=your-super-secret-key-here-change-in-production-min-50-chars
+DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
 
 # Database Configuration
 DB_NAME=resumemaker
 DB_USER=postgres
-DB_PASSWORD=root
+DB_PASSWORD=gggg
 DB_HOST=localhost
 DB_PORT=5432
 
-# AI API (set one key provider)
-GROQ_API_KEY=your-groq-api-key-here
+# AI API (Groq, OpenAI-compatible endpoint)
+GROQ_API_KEY=your-groq-api-key
 OPENAI_BASE_URL=https://api.groq.com/openai/v1
 AI_MODEL=llama-3.3-70b-versatile
 
